sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:45: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  nbPos = getNombrePositions()
  ^BubbleBaseball:46: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  pos = 0
  ^BubbleBaseball:47: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  retour = 0
  ^BubbleBaseball:48: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  col = 9999
  ^BubbleBaseball:49: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (pos <-0 to nbPos-1){
  ^BubbleBaseball:55: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return retour
  ^BubbleBaseball:60: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  nbPos = getNombrePositions()
  ^BubbleBaseball:61: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  pos = 0
  ^BubbleBaseball:62: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  retour = 0
  ^BubbleBaseball:63: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  col = -1
  ^BubbleBaseball:64: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (pos <- 0 to nbPos-1){
  ^BubbleBaseball:70: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return retour
  ^